--- a/src/css/commitment.css
+++ b/src/css/commitment.css
@@ -8,7 +8,7 @@
     font-size: 50px;
     font-weight: 700;
     font-family: sans-serif;
-    padding-top: 20vh;
+    padding-top: 10vh;
     margin-bottom: 10vh;
     color: darkorange;
     text-shadow: 3px 3px 3px black;
@@ -56,11 +56,13 @@ flex-wrap: wrap;
     font-size: 18px;
 }
 .homeInfo{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    
+   
     margin-top: 10vh;
+}
+.visionMisson{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 .visionCard{
     border-radius: 20px;
@@ -68,7 +70,7 @@ flex-wrap: wrap;
     border: 2px solid black;
     background-color: burlywood;
     width: 25vw;
-    min-height: 30vh;
+    min-height: 30vh;  
    
 }
 
@@ -91,12 +93,18 @@ flex-wrap: wrap;
     font-size: 20px;
 }
 .stregthCard{
-    width: 40vw;
-    height: 30vh;
+    width: 70vw;
+    min-height: 30vh;
     background-color:burlywood ;
     border-radius: 20px;
     box-shadow: 0px 0px 30px 10px;
     border: 2px solid black;
+   
+}
+.ourStregth{
+    margin-top: 10vh;
+    display: flex;
+    justify-content: center;
 }
  ul{
     font-size: 25px;
@@ -114,7 +122,7 @@ flex-wrap: wrap;
     display: inline;
     padding: 5px;
     position: relative;
-    left: 33%;
+    left: 40%;
     top: 0%;
     border: 2px solid black;
 }
