--- a/src/css/slider.css
+++ b/src/css/slider.css
@@ -51,24 +51,26 @@ bottom: -18%;
 }
 
 .circle {
-    width: 150px;
-    height: 150px;
-    background-color:  rgb(248, 118, 5);
+    width: 170px;
+    height: 170px;
+    background-image: url('../img/c-1.jpg');
+    background-size: cover;
     margin: 1px;
     border-style: solid;
     border-width: 10px;
-    border-color: #025464;
+    border-color: white;
     border-radius: 50%;
 
     font-size: 90px;
     text-align: center;
     color: white;
-    box-shadow: 20px 20px 40px black;
+    /* box-shadow: 20px 20px 40px black; */
 
 }
 
 .circle:hover {
-    transform: scale(1.2);
+    transform:rotate(360deg);
+    /* transform: scale(1.2); */
     transition-duration: 0.5s;
     transition-timing-function: ease-in-out;
     cursor: pointer;
